# kpower-forecast

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  GEMINI.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
scripts/: benchmark_model_check.py  validate_version.py
src/kpower_forecast/: __init__.py  cli.py  core.py  storage.py  utils.py  weather_client.py
src/kpower_forecast/ml/: __init__.py  bias_correction.py  config.py  conformal.py  dependencies.py  features.py  forecast.py  storage.py
src/kpower_forecast/ml/backends/: __init__.py  base.py  neural.py  nixtla.py  registry.py
tests/: test_core.py  test_ml_config.py  test_ml_conformal.py  test_ml_features.py  test_ml_forecast.py  test_ml_storage.py  test_nixtla_backend.py  test_utils.py  test_weather_client.py
