[project]
name = "kpower-forecast"
version = "2026.2.1"
description = "Solar production and power consumption forecasting package."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "AGPL-3.0" }
authors = [
    { name = "KPower Team", email = "info@kpower.example" }
]
keywords = ["solar", "energy", "forecast", "prophet", "weather"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "prophet>=1.1.5",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "pysolar>=0.8.0",
    "requests>=2.31.0",
    "cmdstanpy>=1.2.0",
    "pytz>=2024.1",
    "pvlib>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "types-requests",
    "types-pytz",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kpower_forecast"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
