[project]
name = "kpower-forecast"
version = "2026.2.3"
description = "Solar production and power consumption forecasting package."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "AGPL-3.0" }
authors = [
    { name = "KSoft.TECH OSS", email = "oss@ksoft.tech" }
]
keywords = ["solar", "energy", "forecast", "prophet", "weather"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "prophet>=1.1.5",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "pysolar>=0.8.0",
    "requests>=2.31.0",
    "cmdstanpy>=1.2.0",
    "pytz>=2024.1",
    "pvlib>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "types-requests",
    "types-pytz",
    "pre-commit",
    "scipy",
    "pandas-stubs",
    "scipy-stubs",
]
cli = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "plotext>=5.2.8",
    "plotly>=6.3.0",
]

[project.scripts]
kpower-forecast = "kpower_forecast.cli:app"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "prophet.*",
    "pvlib.*",
    "pysolar.*",
]
ignore_missing_imports = true

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kpower_forecast"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
